src/app/components/navbar/navbar.css
nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #F7F7F2;
    width: 100%;
}
#small, #medium, #large {
    display: none;
}
#small {
    display: flex;
    justify-content: space-around;
    position: relative;
    width: 100%;
}
#small h1 {
    font-size: 1.5em;
}
.menu-btn {
    height: 40px;
    width: 40px;
    font-size: 1.2em;
    border-radius: 25px;
}
.nav-links {
    display: none;
    align-items: center;
    position: absolute;
    top: 60px;
    background-color: #F7F7F2;
    flex-direction: column;
    border-radius: 0px 0px 22px 22px;
}
.nav-links.open {
    display: flex;
    flex-direction: column;
    width: 100%;
}
.nav-links button {
    margin: 5px 0px;
    width: 100px;
    height: 30px;
    border-radius: 7px;
    border: 1px solid black;
}
button {
    margin: 5px 0px;
    width: 100px;
    height: 30px;
    border-radius: 7px;
    border: 1px solid black;
    cursor: pointer;
}

@media (601px <= width <= 1000px) {
    #small {
        display: none;
    }
    #medium {
        display: flex;
    }
    #large {
        display: none;
    }
    nav {
        width: 100%;
        justify-content: space-around;
    }
}

@media (1000px <= width) {
    #small {
        display: none;
    }
    #medium {
        display: none;
    }
    #large {
        display: flex;
    }
    nav {
        width: 100%;
        justify-content: space-around;
    }
}

